<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="score_board">0/5</string>
    <string name="questionOne">San Francisco is the capital of the United States!</string>
    <string name="falseButton">False</string>
    <string name="trueButton">True</string>
    <string name="next">Next</string>
    <string name="question_oceans">The Pacific Ocean is larger than
the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
in the Americas.</string>
    <string name="question_asia">squinty Eyes?</string>
    <string name="scorePore">Score: %1$d/%2$d</string>
</resources>
